--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,4 @@
+/* contact css */
 body {
     font-family: 'Inter', sans-serif;
     background-color: #f8f9fa;
@@ -91,3 +92,4 @@ footer.dark {
 #themeToggle:hover {
     background-color: #b35c00;
 }
+
